fix: margins and width on smaller screens

--- a/styles.css
+++ b/styles.css
@@ -82,7 +82,7 @@ body {
 }
 
 .container {
-  --max-width: 400px;
+  --max-width: 650px;
   --horizontal-padding: 1rem;
 
   width: min(var(--max-width), calc(100% - (var(--horizontal-padding) * 2)));
@@ -105,6 +105,8 @@ body {
 }
 
 .search-container {
+  --max-width: 500px;
+
   display: flex;
   justify-content: center;
   align-items: center;
@@ -137,6 +139,17 @@ body {
 .search-button img {
   width: 1.25rem;
   height: 1.25rem;
+}
+
+@media (min-width: 50em) {
+  .search-button img {
+    width: 1.5rem;
+    height: 1.5rem;
+  }
+
+  .search-container {
+    padding: 0.875rem 1rem;
+  }
 }
 
 /* Task Input */
